# soemdsp

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.adoc  README.md  repository guide.md  requirements.txt  utils.py
cmake/: CPM.cmake  thirdparty.cmake
include/: soemdsp.hpp
include/soemdsp/: DirtyUpdater.hpp  EnumArray.hpp  SampleRate.hpp  SmootherManager.hpp  Var.hpp  VoiceManager.hpp  Wire.hpp  curve_functions.cpp  curve_functions.hpp  operations_area.hpp  operations_char.cpp  operations_char.hpp  operations_string.cpp  operations_string.hpp  operations_vector.hpp  sehelper.hpp  semath.cpp  semath.hpp  semidi.hpp
include/soemdsp/additive/: HarmonicManager.cpp  HarmonicManager.hpp  additive.hpp  harmonic_algorithms.hpp  layer.hpp
include/soemdsp/delay/: ModulatedDelay.cpp  ModulatedDelay.hpp  Reverb.cpp  (+2 more)
libs/RSMET/: AudioFunctions.cpp  AudioFunctions.h  Complex.h  ComplexFunctions.inl  Constants.h  CurveFitting.cpp  CurveFitting.h  GlobalDefinitions.h  IntegerFunctions.h  LadderFilter.cpp  LadderFilter.h  LinearAlgebraNew.cpp  LinearAlgebraNew.h  Matrix.h  Range.h  SmoothingFilter.hpp  StandardContainerTools.h  TypeDefinitions.h  Vector.h  rsmethelper.hpp
libs/signalsmithdsp/: envelopes.h
old stuff Hydrus/AudioPogrammingEnvironment/: flower child.hpp  sinusoid resonator.hpp
old stuff Hydrus/Chaosfly Patches/: Bubbly.fxp  Chaos1.fxp  Chaos2.fxp  Chaos3.fxp  Chaos4.fxp  Chaos5.fxp  Chaos6.fxp  ChaosLongPattern.fxp  ChaosLongPattern2.fxp  ChaosLongPattern3.fxp  EngineBike.fxp  EngineChirpy.fxp  EngineThatCould.fxp  EngineTrain.fxp  EngineUnstable.fxp  EngravingBeam.fxp  Heartbeat.fxp  LaserPulse.fxp  LightnigStrikeLeft.fxp  Motor.fxp  NoisyA.fxp  NoisyJ.fxp  NoisyPottery.fxp  NoisyR.fxp  NoisyT.fxp  NoisyW.fxp  NoisyX.fxp  Pong.fxp  Portal.fxp  Scanner.fxp  Screws.fxp  Slinky.fxp  TalkingFM.fxp  TalkingFM2.fxp  TalkingFM3.fxp  The Ring.fxp  TornadoPlural.fxp  TornadoSingular.fxp  Unstable.fxp  Unstable2.fxp  (+3 more)
old stuff Hydrus/PlugNScript/: A Att Natural Osc 2.cxx  A Att Natural Osc 2a.cxx  A Att Natural Osc 2b.cxx  AutoFilter Engineer Saw.cxx  AutoFilter Engineer Square.cxx  AutoFilter Engineer Triharmonic.cxx  AutoFilter Musician Saw.cxx  AutoFilter Musician Square.cxx  AutoFilter Musician Triharmonic.cxx  AutoFilter Walters Saw.cxx  Compositional DSF.cxx  Elan Square to Sine.cxx  Extended DSF Oscillators.cxx  FadeSynthFilterEffect.cxx  FilterExp.cxx  Linear Harmonic Saw.cxx  Linear Harmonic Square.cxx  Phase Rotating Saw.cxx  Pure Harmonic Engineer Saw.cxx  Pure Harmonic Engineer Square.cxx  Pure Harmonic Musician Saw.cxx  Pure Harmonic Musician Square.cxx  Pure Walters Saw.cxx  QuasiBandlimited.cxx  RanWalk.cxx  WH Crackle Noise 2.cxx  WH Crackle Noise.cxx  WH Midi Looper.cxx  WH Phase Noise.cxx  WH Rain Noise.cxx  WH Supersaw.cxx  WH Test Osc 2.cxx  WH Test Osc 3.cxx  WH Test Osc 4.cxx  WH Test Osc 5.cxx  WH Test Osc.cxx  WH_blit_saw.cxx  WH_blit_saw3.cxx  WH_blit_saw4.cxx  WH_blit_saw5.cxx  (+9 more)
old stuff Hydrus/ReaktorPatches/: Argi Feedback System with Sawtooth (lead).ens  Argi Feedback System with Sawtooth (pluck).ens  Argi Feedback System with Sawtooth (tuned filter).ens  Argi Feedback System with Sawtooth.ens  Argi Feedback System.ens  FR CONTROL.ens  Feedback Bass.ens  Nyquist Toy.ens  PH CONTROL.ens  PH CONTROL2.ens  Simple Feedback System.ens  Superlove LP18 aggressive.ens  Superlove LP18 superbass with res knob.ens  Superlove LP18.ens  Superlove_LP18_brittle.ens  Superlove_LP18_brittleSquares.ens  Superlove_LP18_suboctave.ens  Superlove_LP18_suboctave2.ens  Superlove_LP18_superbass.ens  Untitled.ens  Untitled2.ens  Untitled3 (getting closer to playability, make high notes better).ens  Untitled4 (boiled down).ens  brown noise.ens  dark sawtooth.ens  fcf aggressive (using crossfade) simplified.ens  fcf aggressive (using crossfade) simplified2.ens  fcf aggressive (using crossfade).ens  fcf aggressive.ens  insane tube like filter (move both filters).ens  pink noise.ens  random walk filter testing.ens  sin test.ens  white noise.ens
old stuff Hydrus/VS/: .clang-tidy  AudioPluginMake.cpp  AudioPluginMake.sln  AudioPluginMake.vcxproj  AudioPluginMake.vcxproj.filters
old stuff Hydrus/c code/: Driver.c  SoEm ElanRandomWalk.c  SoEm TEMPLATE.c  SoEm WalterRandomWalk.c  SoEmAdditive.c  SoEmChaos.c  SoEmFilterFlowerChildRev1.c  SoEmGain.c  SoEmHighpass.c  SoEmHypersaw.c  SoEmLowpass.c  SoEmSampleAndHold.c  SoEmSimplexNoise.c  SoEmSpiralGenerator.c  SoEmTone.c
old stuff Hydrus/loose code/: Sabrina.cpp  Sabrina.h  sinusoid resonator.hpp
old stuff se_framework/: ReadMe.txt  basic.cpp  basic.h  se_framework.cpp  se_framework.h
old stuff se_framework/APE/: se_framework_for_ape.cpp
old stuff se_framework/GUIComponents/: ArcPainter.cpp  ArcPainter.h  Background - Copy.h  Background.cpp  FilmstripPainter.cpp  FilmstripPainter.h  Menu.cpp  Menu.h  MouseKeyboard.cpp  MouseKeyboard.h  MouseKeyboardImages.cpp  MouseKeyboardImages.h  ParameterInfo.cpp  ParameterInfo.h  RectangleHelper.cpp  RectangleHelper.h  ResourceBase.cpp  ResourceBase.h  SVGKnob.cpp  SVGKnob.h  TempBox.cpp  TempBox.h  TrianglePainter.cpp  TrianglePainter.h  VectorSlider.cpp  VectorSlider.h
old stuff se_framework/JerobeamAlgorithms/: JerobeamBlubb.cpp  JerobeamBlubb.h  JerobeamBoing.cpp  JerobeamBoing.h  JerobeamKeplerBouwkamp.cpp  JerobeamKeplerBouwkamp.h  JerobeamMushroom.cpp  JerobeamMushroom.h  JerobeamNyquistShannon.cpp  JerobeamNyquistShannon.h  JerobeamRadar.cpp  JerobeamRadar.h  JerobeamSpiral.cpp  JerobeamSpiral.h  JerobeamTorus.cpp  JerobeamTorus.h  JerobeamWirdoSpiral.cpp  JerobeamWirdoSpiral.h  MaxMSPHelper.cpp  MaxMSPHelper.h
old stuff se_framework/PluginComponents/: BasicEditor.cpp  BasicEditor.h  BasicMidiPlugin.cpp  BasicMidiPlugin.h  MidiMaster.cpp  MidiMaster.h  myparams.cpp  myparams.h
old stuff se_framework/SynthesizerComponents/: MonoSynth.cpp  MonoSynth.h
old stuff se_framework/licensing/: se_PaywareAudioPlugIn.cpp  se_PaywareAudioPlugIn.h
src/: CMakeLists.txt  Main.cpp
(+396 files in other folders)
